--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "2.0.1",
     "bcrypt": "^3.0.0",
     "grunt": "1.0.1",
+    "moment": "^2.22.2",
     "sails": "^1.0.2",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
